# Arabic-NLP-Toolkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
arabic_nlp/: __init__.py  _version.py  core.py  exceptions.py  models.py
arabic_nlp/cli/: __init__.py
arabic_nlp/dialects/: __init__.py
arabic_nlp/keywords/: __init__.py
arabic_nlp/morphology/: __init__.py
arabic_nlp/ner/: __init__.py
arabic_nlp/normalization/: __init__.py
arabic_nlp/pos/: __init__.py
arabic_nlp/profiling/: __init__.py
arabic_nlp/sentiment/: __init__.py
arabic_nlp/stemmer/: __init__.py
arabic_nlp/stopwords/: __init__.py
arabic_nlp/tokenizer/: __init__.py
arabic_nlp/transliteration/: __init__.py
arabic_nlp/utils/: __init__.py
docs/: API.md  PROFILE.md  README.md  WEBAPP.md
examples/: usage.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/performance/: test_performance.py
tests/unit/dialects/: test_dialect_detector.py
tests/unit/keywords/: test_keywords.py
tests/unit/morphology/: test_morphology.py
tests/unit/ner/: test_ner.py
tests/unit/normalization/: test_normalizer.py
tests/unit/pos/: test_pos_tagger.py
tests/unit/profiling/: test_profiling.py
tests/unit/sentiment/: test_sentiment.py
tests/unit/stemmer/: test_stemmer.py
tests/unit/stopwords/: test_stopwords.py
tests/unit/tokenizer/: test_tokenizer.py
tests/unit/transliteration/: test_transliteration.py
tests/unit/utils/: test_utils.py
webapp/: app.py  index.html
webapp/static/: app.js  style.css
