[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

# ─────────────────────────────────────────────
# PROJECT METADATA
# ─────────────────────────────────────────────

[project]
name = "arabic-nlp-toolkit"
version = "2.0.0"
description = "Comprehensive Arabic NLP library — dialect detection, sentiment analysis, tokenization, NER, normalization, and transliteration"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
    { name = "Omar S. M. Abdelfatah", email = "omar@omarsharaf.me" }
]

maintainers = [
    { name = "Omar S. M. Abdelfatah", email = "omar@omarsharaf.me" }
]

keywords = [
    "arabic",
    "nlp",
    "natural-language-processing",
    "arabic-nlp",
    "dialect-detection",
    "sentiment-analysis",
    "tokenizer",
    "ner",
    "named-entity-recognition",
    "transliteration",
    "franco-arabic",
    "text-normalization",
    "msa",
    "egyptian-arabic",
    "gulf-arabic",
    "levantine-arabic",
    "mena",
    "machine-learning",
    "text-processing",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Arabic",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
# For ML-based models (optional upgrade path)
ml = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
]

# For transformer-based high-accuracy models
transformers = [
    "torch>=2.0",
    "transformers>=4.35",
    "tokenizers>=0.15",
]

# Development dependencies
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",       # Parallel test execution
    "pytest-benchmark>=5.2.3",   # Performance benchmarks
    "mypy>=1.19.1",
    "ruff>=0.15.15",
    "black>=25.11.0",
    "pre-commit>=4.3.0",
    "ipython",
    "twine>=4.0",
    "build>=1.0",
]

docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.25",
    "myst-parser>=2.0",
]

web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
]

[project.urls]
Homepage          = "https://github.com/OmarSharaf/arabic-nlp-toolkit"
Documentation     = "https://arabic-nlp-toolkit.readthedocs.io"
Repository        = "https://github.com/OmarSharaf/arabic-nlp-toolkit"
"Bug Tracker"     = "https://github.com/OmarSharaf/arabic-nlp-toolkit/issues"
Changelog         = "https://github.com/OmarSharaf/arabic-nlp-toolkit/blob/main/CHANGELOG.md"
"Author Website"  = "https://www.omarsharaf.me"
LinkedIn          = "https://www.linkedin.com/in/omarsharafaldin/"

[project.scripts]
arabic-nlp = "arabic_nlp.cli:main"

# ─────────────────────────────────────────────
# TOOL CONFIGURATION
# ─────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["arabic_nlp"]

[tool.pytest.ini_options]
testpaths     = ["tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -v
    --tb=short
    --strict-markers
    --cov=arabic_nlp
    --cov-report=term-missing
    --cov-report=html:htmlcov
    --cov-report=xml
    --cov-fail-under=80
"""
markers = [
    "slow: marks tests as slow (use -m 'not slow' to skip)",
    "unit: marks unit tests",
    "integration: marks integration tests",
    "benchmark: marks benchmark tests",
]

[tool.coverage.run]
source   = ["arabic_nlp"]
omit     = [
    "arabic_nlp/_version.py",
    "arabic_nlp/cli/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.mypy]
python_version         = "3.9"
strict                 = true
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true
pretty                 = true

[tool.ruff]
line-length    = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function call in default argument
    "F401",   # Lazy / re-export imports in package modules
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "N802", "B017"]  # assert; Arabic test names; blind except
"webapp/*" = ["E402"]  # sys.path bootstrap before local imports

[tool.black]
line-length    = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile        = "black"
line_length    = 100
known_first_party = ["arabic_nlp"]
